Fix overflow on focus outline

--- a/packages/web-components/src/components/va-accordion/va-accordion.scss
+++ b/packages/web-components/src/components/va-accordion/va-accordion.scss
@@ -13,7 +13,7 @@
 
   .va-accordion__button::part(button) {
     padding: 12px 8px;
-    margin-right: 0;
+    margin: 0 0 4px 0;
   }
 }
 
